--- a/src/App.module.css
+++ b/src/App.module.css
@@ -69,3 +69,54 @@
 
   cursor: pointer;
 }
+
+.contentBoxes {
+  margin-top: 4rem;
+}
+
+.contentTexts {
+  display: flex;
+  margin-bottom: 1.5rem;
+  justify-content: space-between;
+}
+.contentTexts > span {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  gap: 0.5rem;
+}
+
+.contentTexts > span > strong {
+  color: var(--gray-100);
+  padding: 0.35rem 0.5rem;
+  background: var(--gray-400);
+  border-radius: 999px;
+}
+
+.contentTexts > span:nth-of-type(1){
+  color: var(--blue);
+}
+
+.contentTexts > span:nth-of-type(2){
+  color: var(--purple);
+}
+
+.contentFields {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+
+  line-height: 1.6;
+  font-size: 1rem;
+
+  min-height: 30rem;
+
+  border-radius: 8px;
+  border-top: 1px solid var(--gray-400)
+}
+
+.contentFields > p {
+  margin-top: 1rem;
+  font-weight: bold;
+}
