--- a/src/global.css
+++ b/src/global.css
@@ -19,11 +19,16 @@
   box-sizing: border-box; 
 }
 
+body {
+  background: var(--gray-600);
+  color: var(--gray-300);
+  -webkit-font-smoothing: antialiased; 
+}
+
 body, input, textarea, button {
   font-family: 'Roboto', sans-serif;
-  background: var(--gray-600);
+  
   font-size: 0.875rem; 
-  /* Utilizar medida de relativa e não fixas */
   font-weight: 400;
 
 }
