make some new improvements

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -34,3 +34,9 @@
   color: var(--purple);
 }
 
+@media (max-width: 768px){
+  /* Rem ele se baseia pelo font-size */
+  html {
+      font-size: 87.5%;
+  }
+}
