--- a/src/ui/Components/Header/styles.module.css
+++ b/src/ui/Components/Header/styles.module.css
@@ -1,5 +1,6 @@
 .header {
     display: flex;
+    align-items: center;
     justify-content: center;
     padding: 4.5rem 0;
     background: var(--gray-700);
@@ -13,7 +14,8 @@
   
   .header > h1 {
     font-size: 2.5rem;
-    color: var(--blue)
+    color: var(--blue);
+    margin: 0;
   }
   
   .header > h1 > b {
